src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(177, 68, 177);
  font-family: 'Montserrat', sans-serif;

}


h1 {
  position: relative; top: 25px;
  font-family: 'DotGothic16', sans-serif;
  font-size: 4rem;
  color: white;
}

input {
  width: 40%;
  border-radius: 8px;
  background-color: rgb(201, 150, 224);
  font-family: 'DotGothic16', sans-serif;
  font-size: 2rem;
  color: white;
  text-align: center;
  border: 1px solid purple;

}

@media screen, (min-width: 375px) {

  input{
    /* position: relative; top: 65vh; right: 0vh; */
    font-size: 16px;
    width: 250px;
    height: 50px;
  }
 }

button {
  position: relative;
  width: 15%;
  margin-left: 5px;
  font-size: 2rem;
  border: 1px solid purple;
  background-color: rebeccapurple;
color: rgb(201, 150, 224);
  border-radius: 8px;
}

@media screen, (min-width: 375px) {

  button{
    /* position: relative; top: 65vh; right: 0vh; */
    font-size: 16px;
    width: 100px;
    height: 50px;
  }
 }


button:hover {
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
}

.submit {
background-color: rebeccapurple;
color: rgb(201, 150, 224);
top: -3px;
padding: 3px;
}


.newq{
  position: relative;
}

@media screen, (min-width: 375px) {

  .newq{
    /* position: relative; top: 65vh; right: 0vh; */
  top: 30px;
  }
 }

.terms {
  position: relative; top: 50px;
  font-size: 8px;
}
@media screen, (min-width: 375px) {

  .terms{
    /* position: relative; top: 65vh; right: 0vh; */
    font-size: 8px;
  }
 }


.trademark{
  position: absolute; right: 10px; bottom: -20px;
  font-family: Arial, Helvetica, sans-serif;
  color: rebeccapurple;
}

@media screen, (min-width: 375px) {

  .trademark{
    /* position: relative; top: 65vh; right: 0vh; */
    bottom: -50px;
  }
 }

